# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua
.claude/: settings.local.json
App/: CMakeLists.txt
App/shaders/: compile.bat  test.ps.hlsl  test.vs.hlsl  test_frag.cso  test_frag.spv  test_vert.cso  test_vert.spv  triangle.frag  triangle.ps.hlsl  triangle.vert  triangle.vs.hlsl  triangle_frag.cso  triangle_frag.spv  triangle_vert.cso  triangle_vert.spv
App/src/: AppLayer.cpp  AppLayer.h  main.cpp
Core/: CMakeLists.txt
Core/shaders/: SkyLuts.cs.hlsl  SkyTransmittance.cs.hlsl  SkyUtil.hlsli
Core/src/: Engine.cpp  Engine.h  Handle.h  IWindowSystem.h  LayerStack.cpp
Core/src/Asset/: Asset.h  AssetLoader.h  AssetManager.h  AssetSystem.h  GltfImporter.cpp  GltfImporter.h  HlslImporter.cpp  HlslImporter.h  Meta.h  TextureImporter.cpp
Core/src/ECS/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Core/src/Events/: ApplicationEvents.h  Event.h  KeyEvents.h  MouseEvents.h
Core/src/Graphics/: D3D12Device.cpp  D3D12Device.h  RenderBackend.h  RenderDevice.h  VulkanDevice.cpp  VulkanDevice.h
Core/src/Math/: Matrix4x4.h  Vector2.h  Vector2D.h  Vector3.h  Vector3D.h  Vector4.h
Core/src/Platform/: GLFWWindow.cpp  GLFWWindow.h
Core/src/Render/: BufferView.h  DrawBinFlags.h  GpuTypes.h  ICommandContext.h  IGpuDevice.h  IRenderPipeline.h  NvrhiGpuDevice.cpp  NvrhiGpuDevice.h  RenderObject.h  RenderPacket.h  RenderView.h  SceneRenderSystem.h  SubmittedLight.h  Vertex.h
Core/src/Render/Binning/: MeshBinner.cpp  MeshBinner.h
Core/src/Render/FrameGraph/: FrameGraph.h  RenderResource.h  TransientResourceSystem.cpp
Core/src/Render/Pipeline/: SkyLuts.h  SkyTransmittance.h
Core/src/Render/RenderGraph/: FrameGraph.cpp  FrameGraph.h  FrameGraphBlackboard.h  RenderResource.h  TransientResourceSystem.cpp  TransientResourceSystem.h
Core/src/Util/: Layer.h  LayerStack.h  Log.cpp  Log.h  UUID.h
Core/src/Window/: GLFWWindow.cpp  GLFWWindow.h  IWindowSystem.h
DeferredRender/: CMakeLists.txt  premake5.lua
DeferredRender/src/: lib_impl.cpp  main.cpp  vk_buffer.cpp  vk_buffer.h  vk_context.cpp  vk_context.h  vk_debug.cpp  vk_debug.h  vk_swapchain.cpp  vk_types.h
Editor/: Editor.csproj  Program.cs
EngineDLL/: CMakeLists.txt
EngineDLL/src/: EngineAPI.cpp  EngineAPI.h
Examples/01_Clear/: CMakeLists.txt
Examples/01_Clear/src/: AppLayer.cpp  AppLayer.h
Examples/02_Quad/: CMakeLists.txt
Examples/02_Quad/shaders/: quad.ps.hlsl  quad.vs.hlsl
Examples/02_Quad/src/: AppLayer.cpp  AppLayer.h  main.cpp
Examples/03_BindlessQuad/: CMakeLists.txt
Examples/TestBed/: CMakeLists.txt
Examples/TestBed/src/: AppLayer.cpp  AppLayer.h
VulkanDeferredRenderer/: premake5.lua
VulkanDeferredRenderer/src/: vk_context.cpp  vk_context.h  vk_swapchain.h  vk_types.h
scripts/: CMakeCache.txt  FileUtil.py  GenProjects-Linux.sh  GenProjects-Win.bat  Setup-Win.bat  Setup.py  SetupCMake.py  SetupPremake.py  SetupProjectsLinux.py  SetupPython.py  SetupVulkan.py  switch-backend.bat
